completed magnitude page

--- a/magnitude.html
+++ b/magnitude.html
@@ -39,25 +39,34 @@
                 </nav>
             </header>
             <!-- Main -->
-            <article id="main-bidcast">
+            <article id="main-magnitude">
                 <header>
                     <h2>Magnitude</h2>
                     <p>Track Covid Data</p>
                 </header>
                 <section class="wrapper style5">
                     <div class="inner">
-                        <h3>Capstone Presentation</h3>
-                        <p>Bidcast was my final project at Actualize Coding Bootcamp, which was presented in front of a live stream audience. A panel of past alumni and the school's president asked questions and commented on the features and technologies included in the app.</p>
-                        <p>I chose to build this app because my goal is to work on projects that support creatives. My vision was to help small podcasts find a revenue stream that helps them continue pursuing their passion.</p>
+                        <a href="https://magnitude-app.netlify.com">
+                            <img src="images/magnitude-graph.png" alt="magnitude-graph" class="image fit">
+                        </a>
+                        <h3>Expanding My Skillset</h3>
+                        <p>Since finishing a coding bootcamp earlier in the year (and relentlessly job hunting during a pandemic) I've been devoting my time to learning new languages and frameworks that would expand my skillset and make me a stronger programmer. The hours spent on tutorials paid off on this project, especially when it came to React, but there were still a ton of learning opportunities in the project itself.</p>
 
+                        <a href="https://magnitude-app.netlify.com">
+                            <img src="images/magnitude-gridmap.png" alt="magnitude-graph" class="image fit">
+                        </a>
 
+                        <h4>Mob Programming</h4>
+                        <p>I partnered up with a small group of colleagues from Actualize to tackle this project. We each brought different skills to the table and contributed time to working together. Staying organized and consistently blocking off time to get together helped keep us on schedule for when we wanted this project completed by, which was just after a few weeks. These are the types of experiences I know will be useful when working professionally on a team.</p>
+
+                        <!-- <a href="https://magnitude-app.netlify.com">
+                            <img src="images/magnitude-logo.png" alt="magnitude-graph" class="image fit">
+                        </a> -->
 
                         <hr />
 
                         <h4>Tools</h4>
-                        <p>The app is built with a <b>Ruby on Rails</b> backend and <b>Vue.js</b> frontend, which were part of the curriculum in the bootcamp.</p>
-
-                        <p>I researched and implemented technology that was not covered in bootcamp, such as <b>Action Cable</b> to update live data on a page without the user refreshing their browser, <b>CronJob</b> to change expired data, and <b>ActiveStorage</b> to handle files uploaded by users. </p>
+                        <p>The app is built in <b>React</b> and leverages <b>Chart.js</b> to visualize the data pulled from a public COVID-19 data API.</p>
 
                         <h4>Links</h4>
                         <p><a href="https://magnitude-app/netlify.com/" target="_blank">Magnitude Website</a></p>
