--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<section class="spotlight">
 					<div class="image">
 						<a href="magnitude.html">
-							<img src="images/magnitude-screenshot.png" alt="" />
+							<img src="images/magnitude-graph.png" alt="" />
 						</a>
 					</div>
 					<div class="content">
