--- a/bidcast.html
+++ b/bidcast.html
@@ -26,7 +26,8 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-                      <li><a href="index.html">Home</a></li>
+					  <li><a href="index.html">Home</a></li>
+					  <li><a href="magnitude.html">Magnitude</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
                       <li><a href="full_measure.html">Full Measure</a></li>
                       <li><a href="actualize.html">Actualize</a></li>
