--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
                   <div id="menu">
                     <ul>
                       <li><a href="index.html">Home</a></li>
+                      <li><a href="magnitude.html">Magnitude</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
                       <li><a href="full_measure.html">Full Measure</a></li>
                       <li><a href="the_wall.html">The Wall</a></li>
