magnitude page edits

--- a/magnitude.html
+++ b/magnitude.html
@@ -46,18 +46,16 @@
                 </header>
                 <section class="wrapper style5">
                     <div class="inner">
+                        <h3>Expanding My Skillset</h3>
+                        <p>Since finishing a coding bootcamp earlier in the year (and relentlessly job hunting during a pandemic) I've been devoting my time to learning new languages and frameworks that would expand my skillset and make me a stronger programmer. The hours spent on tutorials and documentations paid off on this project, especially when it came to React, but there were still a ton of learning opportunities in the project itself.</p>
                         <a href="https://magnitude-app.netlify.com">
                             <img src="images/magnitude-graph.png" alt="magnitude-graph" class="image fit">
                         </a>
-                        <h3>Expanding My Skillset</h3>
-                        <p>Since finishing a coding bootcamp earlier in the year (and relentlessly job hunting during a pandemic) I've been devoting my time to learning new languages and frameworks that would expand my skillset and make me a stronger programmer. The hours spent on tutorials paid off on this project, especially when it came to React, but there were still a ton of learning opportunities in the project itself.</p>
-
+                        <h4>Mob Programming</h4>
+                        <p>I partnered up with a small group of colleagues from Actualize to tackle this project. We each brought different skills to the table and contributed time to working together. Staying organized and consistently blocking off time to get together helped keep us on schedule for when we wanted this project completed by, which was just after a few weeks. These are the types of experiences I know will be useful when working professionally on a team.</p>
                         <a href="https://magnitude-app.netlify.com">
                             <img src="images/magnitude-gridmap.png" alt="magnitude-graph" class="image fit">
                         </a>
-
-                        <h4>Mob Programming</h4>
-                        <p>I partnered up with a small group of colleagues from Actualize to tackle this project. We each brought different skills to the table and contributed time to working together. Staying organized and consistently blocking off time to get together helped keep us on schedule for when we wanted this project completed by, which was just after a few weeks. These are the types of experiences I know will be useful when working professionally on a team.</p>
 
                         <!-- <a href="https://magnitude-app.netlify.com">
                             <img src="images/magnitude-logo.png" alt="magnitude-graph" class="image fit">
