updated nav bar with tastebuddies page link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 							<div id="menu">
 								<ul>
 									<li><a href="index.html">Home</a></li>
+									<li><a href="tastebuddies.html">Tastebuddies</a></li>
 									<li><a href="magnitude.html">Magnitude</a></li>
 									<li><a href="bidcast.html">Bidcast</a></li>
 									<li><a href="full_measure.html">Full Measure</a></li>
