--- a/tastebuddies.html
+++ b/tastebuddies.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Magnitude - Rob Kondratowicz</title>
+		<title>Tastebuddies - Rob Kondratowicz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,7 +42,7 @@
             <!-- Main -->
             <article id="main-magnitude">
                 <header>
-                    <h2>Magnitude</h2>
+                    <h2>Tastebuddies</h2>
                     <p>Track Covid Data</p>
                 </header>
                 <section class="wrapper style5">
