--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
 						</ul>
 					</div>
 				</section>
+				<!-- Tastebuddies -->
+				<section class="spotlight">
+					<div class="image">
+						<a href="tastebuddies.html">
+							<img src="images/tb-restaurant.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>Tastebuddies - Swipe Through Food</h2>
+						<p>Users can swipe through images of food - swipe left to pass on a menu item, swipe right to get more info on the restaurant. Node.js backend & Vue frontend.</p>
+						<ul class="actions special">
+						<li><a href="tastebuddies.html" class="button primary">More on Tastebuddies</a></li>
+						</ul>
+					</div>
+				</section>
 				<!-- Magnitude -->
 				<section class="spotlight">
 					<div class="image">
