--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 							<div id="menu">
 								<ul>
 									<li><a href="index.html">Home</a></li>
+									<li><a href="beerez.html">Beer-EZ</a></li>
 									<li><a href="tastebuddies.html">Tastebuddies</a></li>
 									<li><a href="magnitude.html">Magnitude</a></li>
 									<li><a href="bidcast.html">Bidcast</a></li>
@@ -79,6 +80,21 @@
 						<p>While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. </p>
 						<ul class="actions special">
 							<li><a href="actualize.html" class="button primary">More on Actualize</a></li>
+						</ul>
+					</div>
+				</section>
+				<!-- BeerEZ -->
+				<section class="spotlight">
+					<div class="image">
+						<a href="tastebuddies.html">
+							<img src="images/tb-restaurant.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>BeerEZ - Online Beer Shop</h2>
+						<p>Users can swipe through images of food - swipe left to pass on a menu item, swipe right to get more info on the restaurant. Node.js backend & Vue frontend.</p>
+						<ul class="actions special">
+						<li><a href="tastebuddies.html" class="button primary">More on Tastebuddies</a></li>
 						</ul>
 					</div>
 				</section>
