--- a/tastebuddies.html
+++ b/tastebuddies.html
@@ -27,6 +27,7 @@
                             <div id="menu">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
+                                    <li><a href="beerez.html">Beer-EZ</a></li>
                                     <li><a href="tastebuddies.html">Tastebuddies</a></li>
                                     <li><a href="magnitude.html">Magnitude</a></li>
                                     <li><a href="bidcast.html">Bidcast</a></li>
@@ -81,8 +82,9 @@
 
 
                         <h4>Links</h4>
-                        <p><a href="https://magnitude-app/netlify.com/" target="_blank">Magnitude Website</a></p>
-                        <p><a href="https://github.com/jess-white/magnitude" target="_blank">Repository</a></p>
+                        <p><a href="" target="_blank">Tastebuddies Website</a></p>
+                        <p><a href="https://github.com/Jess-White/tastebuddies_app_frontend" target="_blank">Frontend Repository</a></p>
+                        <p><a href="https://github.com/robkondrat/tastebuddies-api" target="_blank">Backend Repository</a></p>
                     </div>
                 </section>
             </article>
