--- a/bidcast.html
+++ b/bidcast.html
@@ -27,6 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="beerez.html">Beer-EZ</a></li>
 											<li><a href="tastebuddies.html">Tastebuddies</a></li>
 											<li><a href="magnitude.html">Magnitude</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
