added images and some content to beerez page and main page

--- a/beerez.html
+++ b/beerez.html
@@ -50,10 +50,10 @@
                     <div class="inner">
                         
                         <a href="https://magnitude-app.netlify.com">
-                            <img src="images/tb-swipeleft.png" alt="tastebuddies-swipeleft" class="image-left fit">
+                            <img src="images/beerez-beer.png" alt="beerez-beer" class="image-left fit">
                         </a>
                         <h3>Overview</h3>
-                        <p>Users looking for restaurant recommendations begin by selecting from a list of cuisines they might be interested in. Based off of their selections, the user is presented with images of menu items that they can swipe right or left on depending on if they are interested in the food their shown. Once the user swipes right, they are shown more information on the restaurant that offers that menu item, including their website, location, and other menu items they offer.</p>
+                        <p>Users begin with a variety of beers and breweries to choose from, which they can add to their cart and checkout to purchase.</p>
                     </div>
                     <br>
                     <br>
@@ -66,7 +66,7 @@
                         </div>
 
                         <a href="https://magnitude-app.netlify.com">
-                            <img src="images/tb-swiperight.png" alt="tb-swiperight" class="image-right fit">
+                            <img src="images/beerez-brewery.png" alt="beerez-brewery" class="image-right fit">
                         </a>
                         <h3>Future Releases</h3>
                         <p>User authentication is already set up, and future releases will feature a more elaborate restaurant recommendation process based on user submitted ingredient preferences. The flow of the site would also change from one immediate restaurant recommendation to a collection based on what the user swiped right on. The potential for in-app ordering rather than redirecting to the restaurant's website is also worth implementing.</p>
@@ -76,7 +76,7 @@
                             <img src="images/magnitude-logo.png" alt="magnitude-graph" class="image fit">
                         </a> -->
                         <h4>Tools</h4>
-                        <p><b>Postgres</b> database, <b>Node.js</b> backend, <b>Vue.js</b> frontend.</p>
+                        <p><b>Postgres</b> database, <b>Rails</b> backend, <b>Vue.js</b> frontend.</p>
                         <hr />
 
 
@@ -113,13 +113,13 @@
     </body>
     <style>
         .image-left {
-            width: 40%;
+            width: 50%;
             float: left;
             margin: 20px;
 
         }
         .image-right {
-            width: 40%;
+            width: 50%;
             float: right;
             margin: 20px;
         }
