--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 				<!-- BeerEZ -->
 				<section class="spotlight">
 					<div class="image">
-						<a href="tastebuddies.html">
-							<img src="images/tb-restaurant.png" alt="" />
+						<a href="beerez.html">
+							<img src="images/beerez-beer.png" alt="" />
 						</a>
 					</div>
 					<div class="content">
-						<h2>BeerEZ - Online Beer Shop</h2>
-						<p>Users can swipe through images of food - swipe left to pass on a menu item, swipe right to get more info on the restaurant. Node.js backend & Vue frontend.</p>
+						<h2>Beer-EZ - Online Beer Shop</h2>
+						<p>Discover new breweries, browse their beer selections, place your order.</p>
 						<ul class="actions special">
-						<li><a href="tastebuddies.html" class="button primary">More on Tastebuddies</a></li>
+						<li><a href="beerez.html" class="button primary">More on Beer-EZ</a></li>
 						</ul>
 					</div>
 				</section>
