added content to beerez

--- a/beerez.html
+++ b/beerez.html
@@ -48,43 +48,43 @@
                 </header>
                 <section class="wrapper style5">
                     <div class="inner">
-                        
-                        <a href="https://magnitude-app.netlify.com">
-                            <img src="images/beerez-beer.png" alt="beerez-beer" class="image-left fit">
-                        </a>
                         <h3>Overview</h3>
                         <p>Users begin with a variety of beers and breweries to choose from, which they can add to their cart and checkout to purchase.</p>
                     </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    <div class="inner">
+                        
+                        <a href="https://beerez.netlify.com">
+                            <img src="images/beerez-beer.png" alt="beerez-beer" class="image-left fit">
+                        </a>
+                    </div>
                     <div class="inner">
                         <div>
-                            <h3>Swiping Components</h3>
-                            <p>Multiple components in Vue were implemented to handle the logic around what the user swipes on, how to remove items on 'swipe lefts', as well as how to successfully pass data on a 'swipe right'.</p>
+                            <h3>Cart & Checkout Functionality</h3>
+                            <p>I chose to build checkout functionality from scratch rather than using an outside resource like Snipcart or other e-commerce technologies. Users must be authenticated by signing up/logging in, can add and remove items from their cart, complete their order and view their order history.</p>
                         </div>
+                        <br>
 
-                        <a href="https://magnitude-app.netlify.com">
+                        <a href="https://beerez.netlify.com">
                             <img src="images/beerez-brewery.png" alt="beerez-brewery" class="image-right fit">
                         </a>
                         <h3>Future Releases</h3>
-                        <p>User authentication is already set up, and future releases will feature a more elaborate restaurant recommendation process based on user submitted ingredient preferences. The flow of the site would also change from one immediate restaurant recommendation to a collection based on what the user swiped right on. The potential for in-app ordering rather than redirecting to the restaurant's website is also worth implementing.</p>
+                        <p>Search functionality through beers/breweries is my top priority, along with a bigger database and mock credit card functionality at checkout.</p>
+                        <br>
 
-
-                        <!-- <a href="https://magnitude-app.netlify.com">
+                        <!-- <a href="https://beerez.netlify.com">
                             <img src="images/magnitude-logo.png" alt="magnitude-graph" class="image fit">
                         </a> -->
                         <h4>Tools</h4>
                         <p><b>Postgres</b> database, <b>Rails</b> backend, <b>Vue.js</b> frontend.</p>
+                        <br>
                         <hr />
 
 
 
                         <h4>Links</h4>
-                        <p><a href="" target="_blank">Tastebuddies Website</a></p>
-                        <p><a href="https://github.com/Jess-White/tastebuddies_app_frontend" target="_blank">Frontend Repository</a></p>
-                        <p><a href="https://github.com/robkondrat/tastebuddies-api" target="_blank">Backend Repository</a></p>
+                        <p><a href="https://beerez.netlify.com" target="_blank">BeerEZ Website</a></p>
+                        <p><a href="https://github.com/robkondrat/beerez-frontend" target="_blank">Frontend Repository</a></p>
+                        <p><a href="https://github.com/robkondrat/beerez-backend" target="_blank">Backend Repository</a></p>
                     </div>
                 </section>
             </article>
